# WatchPost

./: .gitignore  GOAL.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: icon_variants.py  install-deps.mjs  install-prerequisites-macos.sh  install-prerequisites-windows.ps1  make_icon.py  release-check.sh  setup.mjs  setup.ps1  setup.sh  sync-version.mjs  test-m4-docker.ps1  test-m4-docker.sh
src/: disks.test.ts  disks.ts  format.test.ts  format.ts  history.test.ts  history.ts  main.ts  servers.ts  status.test.ts  status.ts  styles.css  widgetPrefs.test.ts  widgetPrefs.ts  widgetSettingsUi.ts  widgetStrip.test.ts  widgetStrip.ts
src-tauri/: Cargo.toml  app-meta.json  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: linux_metrics.sh
src-tauri/src/: lib.rs  main.rs  metrics.rs  store.rs
src-tauri/src/ssh/: diagnose.rs  linux.rs  mobaxterm.rs  mod.rs
wiki/: Build-from-source.md  FAQ.md  Home.md  RELEASE.md  windowsDev.md
